--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,13 +95,13 @@ nav {
   align-items: center;
   display: flex;
   flex: 0 0 auto;
-  flex-flow: row nowrap;
-  gap: 15px;
+  flex-flow: row wrap;
+  gap: 0 15px;
   height: min-content;
   overflow: visible;
   padding: 0;
   position: relative;
-  width: max-content;
+  width: auto;
   box-sizing: border-box;
 }
 
